src/test/java/com/lambda/Test1.java
package com.lambda;

public class Test1 {

	public static void main(String[] args) {
		short i = 1;
//		i++;
//		i += 1;
//		i = i + 1; // error

	}
	
}
